# melbi

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: CLAUDE.md  cryptic-nibbling-iverson.md
.claude/memory/: project-patterns.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  highlighter.rs  lib.rs  main.rs
cli/src/commands/: bug.rs  check.rs  completions.rs  debug.rs  eval.rs  fmt.rs  mod.rs  repl.rs  run.rs
cli/src/commands/repl/: highlighter.rs  lexer.rs  mod.rs
cli/src/common/: engine.rs  error.rs  input.rs  mod.rs  panic.rs
cli/tests/: check_test.rs  eval_test.rs  fmt_test.rs  highlight_test.rs  lexer_test.rs  repl_test.rs  run_test.rs
cli/tests/common/: mod.rs
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/api/: engine.rs  environment.rs  error.rs  expression.rs  mod.rs
core/src/compiler/: bytecode.rs  bytecode_test.rs
core/src/parser/: expression.pest  parser.rs
core/src/stdlib/: array.rs  array_test.rs  int.rs  int_test.rs  math.rs  math_test.rs  mod.rs  string.rs  string_test.rs
core/src/types/: type_class.rs
core/src/values/: binder.rs  dynamic.rs  dynamic_test.rs  function.rs  mod.rs  type_class_traits.rs  typed.rs
core/src/vm/: mod.rs  vm.rs
core/tests/: public_api.rs  stack_overflow.rs
docs/: STALE-DOCS-AUDIT.md  TODO.tasks.md  cli-refactor-plan.md  melbi-lang-cheat-sheet.md  mvp-roadmap.md
docs/design/: adding-stack-traces-to-execution-errors.md  public-api.md  standard-library.md
fmt/: Cargo.toml  README.md
fmt/src/: lib.rs
lsp/: Cargo.toml  README.md
macros/: Cargo.toml  README.md
macros/src/: common.rs  lib.rs  melbi_const.rs  melbi_fn.rs  melbi_fn_new.rs  melbi_fn_old.rs  melbi_package.rs
macros/tests/: compile_fail_test.rs  declarative_poc.rs  generic_ffi_macro_test.rs  generic_ffi_poc.rs  melbi_fn_e2e.rs  melbi_fn_new_test.rs  melbi_fn_old_test.rs  melbi_fn_test.rs  melbi_package_test.rs
macros/tests/compile_fail/: arena_typo.rs  arena_typo.stderr  const_generic.rs  const_generic.stderr  generic_no_input_param.rs  generic_no_input_param.stderr  invalid_attribute.rs  invalid_attribute.stderr  legacy_type_mgr_typo.rs  legacy_type_mgr_typo.stderr  missing_return_type.rs  missing_return_type.stderr  multiple_lifetimes.rs  multiple_lifetimes.stderr  name_not_string.rs  name_not_string.stderr  package_builder_integer.rs  package_builder_integer.stderr  package_builder_not_string.rs  package_builder_not_string.stderr  package_builder_string.rs  package_builder_string.stderr  package_file_module.rs  package_file_module.stderr  package_invalid_attribute.rs  package_invalid_attribute.stderr  package_name_integer.rs  package_name_integer.stderr  package_name_string.rs  package_name_string.stderr  pattern_matching.rs  pattern_matching.stderr  self_parameter.rs  self_parameter.stderr  type_manager_typo.rs  type_manager_typo.stderr  type_parameter.rs  type_parameter.stderr
parser/: Cargo.toml  README.md
parser/src/: heap_builder_test.rs  lib.rs
playground/worker/src/: lib.rs
src/: error_renderer.rs  lib.rs
support/: README.md
support/small-str/: Cargo.toml
support/teeny-vec/: Cargo.toml  README.md
support/teeny-vec/benches/: teeny_vec.rs
support/teeny-vec/scripts/: benchmark.sh
support/teeny-vec/src/: lib.rs
support/thin-ref/: Cargo.toml
support/thin-ref/src/: lib.rs
tests/cases/: mod.rs
types/: Cargo.toml  README.md
types/src/: arena_builder.rs  box_builder.rs  lib.rs  macros.rs
types/src/algo/: mod.rs  transform.rs  visit.rs
types/src/builders/: arena_builder.rs  box_builder.rs  mod.rs
types/src/builders/arena_builder/: small_str.rs
types/src/core/: builder.rs  flags.rs  kind.rs  mod.rs  ty.rs
types/src/core/traversal/: fold.rs  mod.rs  visit.rs
types/src/kind/: mod.rs  ty_kind.rs
types/src/traits/: builder.rs  mod.rs
types/tests/: fold_tests.rs
values/: Cargo.toml  README.md
values/src/: copy.rs  lib.rs  raw.rs
values/src/builders/: arena_builder.rs  box_builder.rs  mod.rs
values/src/dynamic/: array.rs  mod.rs  value.rs  value_view.rs
values/src/traits/: array_view.rs  builder.rs  mod.rs  value_view.rs
values/src/typed/: array.rs  marshal.rs  mod.rs
values/tests/: arena_value_builder.rs  box_value_builder.rs  compile_time_option.rs  copy_value.rs  dst.rs  heap_builder.rs  typed_array.rs  value_builder.rs
