[workspace]
members = [
    "cli",
    "core",
    "fmt",
    "lsp",
    "macros",
    "parser",
    "playground/worker",
    "support/small-str",
    "support/teeny-vec",
    "support/thin-ref",
    "types",
    "values",
    "zed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nilton Volpato <nilton@volpa.to>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
melbi = { version = "0.1.0" }
melbi-core = { version = "0.1.0" }
melbi-types = { version = "0.1.0" }
melbi-lsp = { version = "0.1.0" }
melbi-cli = { version = "0.1.0" }
melbi-fmt = { version = "0.1.0" }
melbi-macros = { version = "0.1.0" }
melbi-small-str = { version = "0.1.0" }
melbi-teeny-vec = { version = "0.1.0" }

allocator-api2 = "0.2.21"  # Match bumpalo and hashbrown
ariadne = "0.6.0"
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher", "inline-more", "allocator-api2", "equivalent"] }
lazy_static = "1.4"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
once_cell = { version = "1.21.3" }
pest = { version = "^2.8.0", default-features = false }
pest_derive = { version = "^2.8.0", default-features = false }
pest_generator = { version = "^2.7", default-features = false}
pretty_assertions = "1.4"
smallvec = { version = "1.15.1", features = ["const_new", "union"] }
static_assertions = { version = "1.1.0" }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.47.1", features = ["full"] }

[package]
name = "melbi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ariadne.workspace = true
bumpalo.workspace = true
melbi-core.workspace = true
melbi-fmt = { workspace = true, optional = true }
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
expect-test = "1.5"
pretty_assertions.workspace = true
once_cell.workspace = true
indoc = "2"
pest.workspace = true

[lib]
proc-macro = false

[features]
default = ["fmt"]
fmt = ["dep:melbi-fmt"]

[patch.crates-io]
melbi = { path = "." }
melbi-core = { path = "core" }
melbi-types = { path = "types" }
melbi-lsp = { path = "lsp" }
melbi-cli = { path = "cli" }
melbi-fmt = { path = "fmt" }
melbi-macros = { path = "macros" }
melbi-small-str = { path = "support/small-str" }
melbi-teeny-vec = { path = "support/teeny-vec" }
