[package]
name = "melbi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
melbi.workspace = true
melbi-core.workspace = true
bumpalo.workspace = true
reedline = { version = "0.43.0", features = [] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-melbi = { git = "https://github.com/melbi-lang/tree-sitter-melbi" }
nu-ansi-term = "0.50"
dirs = "6.0.0"
logos = "0.15.1"
pest.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rexpect = "0.6"
