[package]
name = "melbi-types"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.4"
bumpalo.workspace = true
hashbrown.workspace = true
string_cache = "0.9.0"
smallvec.workspace = true
static_assertions.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lib]
proc-macro = false

[features]
default = []
std = []
experimental = []
