[package]
name = "melbi-types"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.4"
bumpalo.workspace = true
hashbrown.workspace = true
melbi-small-str.workspace = true
string_cache = "0.9.0"
smallvec.workspace = true

[dev-dependencies]

[lib]
proc-macro = false

[features]
default = []
std = []
experimental = []
